--- a/src/Components/Body/Image/ImageH1.css
+++ b/src/Components/Body/Image/ImageH1.css
@@ -1,76 +1,65 @@
-
-
-
-
 .ImageH1Container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: auto;
     max-width: 960px;
-
+    width: 100%;
 }
 
-
-
-
-
-
 .ImageH1Container>div>img {
-    width: 100%;
-
+    width: 80%;
+    
 }
 
 .ImageH1Container>div {
     max-width: 480px;
-
+    width: 70%;
 }
 
 .ImageH1Container>section {
     margin: auto;
-
 }
 
 @media only screen and (max-width: 650px) {
     .ImageH1Container>section>h1 {
-        font-size: 34px;
+        font-size: 4.5vw;
+    }
+    .ImageH1Container>div>img {
+        width: 120%;
     }
 }
 
-
 @media only screen and (max-width: 550px) {
     .ImageH1Container>section>h1 {
-        font-size: 30px;
+        font-size: 5vw;
     }
 }
 
 @media only screen and (max-width: 500px) {
     .ImageH1Container {
-        display: grid;
-        grid-template-columns: 1fr;
+        display: block;
     }
 
     .ImageH1Container>section>h1 {
-        font-size: 35px;
+        font-size: 6vw;
         text-align: center;
-        width: 300px;
+        width: 80%;
+        margin: 0 auto;
     }
 
     .ImageH1Container>section {
-        margin: auto;
         text-align: center;
     }
 
     .ImageH1Container>div>img {
         display: none;
-        width: 0;
     }
 }
 
-@media only screen and (max-width: 300px){
-    .ImageH1Container>section>h1{
-        width: 200px;
-        font-size: 26px;
+@media only screen and (max-width: 300px) {
+    .ImageH1Container>section>h1 {
+        width: 80%;
+        font-size: 8vw;
         display: none;
-        
     }
 }
